samples/_failures_safe/1761206010_5d429b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62d3dab8.c: In function ‘main’:
./samples/SAFE/__tmp_62d3dab8.c:129:35: error: expected ‘)’ at end of input
  129 |     generate_sample_logs(&analyzer
      |                         ~         ^
      |                                   )
./samples/SAFE/__tmp_62d3dab8.c:129:5: error: expected declaration or statement at end of input
  129 |     generate_sample_logs(&analyzer
      |     ^~~~~~~~~~~~~~~~~~~~
